--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-boilerplate",
   "version": "4.0.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "description": "Aristotle - HGI Back Office",
   "repository": {
     "type": "git",
     "url": "git://github.com/react-boilerplate/react-boilerplate.git"
